pending fix ticket

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,12 @@
 
         <br />
 
+        <p>Mensaje:</p>
+        <input name="message" type="text" maxlength="64" id="message" />
+
+        <br />
+        <br />
+
         <p>Anchura del rollo de papel</p>
         <input type="radio" id="w1" name="width" value="140px" />
         <label for="w1">140px (37mm)</label><br />
